--- a/template.html
+++ b/template.html
@@ -45,10 +45,10 @@ $endfor$
     <td class="width-min"><time style="white-space: pre;">$date$</time></td>
   </tr>
   <tr>
-    <th class="width-min">Author</th>
-    <td class="width-auto"><a href="$author-url$"><cite>$author$</cite></a></td>
-    <th class="width-min">License</th>
-    <td>MIT</td>
+    <th class="width-min">Github</th>
+    <td class="width-auto"><a href="$github-url$"><cite>$github-username$</cite></a></td>
+    <th class="width-min"></th>
+    <td></td>
   </tr>
 </table>
 <label class="debug-toggle-label"><input type="checkbox" class="debug-toggle" /> Debug mode</label>
@@ -70,6 +70,13 @@ $body$
 $for(include-after)$
 $include-after$
 $endfor$
+
+<table class="footer">
+  <tr>
+    <th class="width-min">Design by</th>
+    <td class="width-min"><a href="https://github.com/owickstrom/the-monospace-web"><cite>Oskar Wickström - The Monospace Web</cite></a></td>
+  </tr>
+</table>
   <div class="debug-grid"></div>
   <script src="index.js"></script>
 </body>
