add work experience(pretty) and education(not pretty yet) sections

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 <ul class="incremental">
 <li><a href="#introduction" id="toc-introduction">Introduction</a></li>
 <li><a href="#projects" id="toc-projects">Projects</a></li>
+<li><a href="#work-experience" id="toc-work-experience">Work
+Experience</a></li>
+<li><a href="#education" id="toc-education">Education</a></li>
 </ul>
 </nav>
 <h2 id="introduction">Introduction</h2>
@@ -47,6 +50,66 @@ and I’m also getting my hands dirty with C.</p>
 most of the time – and coding.</p>
 <h2 id="projects">Projects</h2>
 <p>None at all, for now…</p>
+<h2 id="work-experience">Work Experience</h2>
+<h4 id="fullstack-developer-at-irancho">Fullstack Developer at <a
+href="http://www.irancho.com.br">iRancho</a></h4>
+<ul class="incremental">
+<li>May 2022 - Present</li>
+<li>JavaScript, TypeScript, Rust, microservices, MySQL, PostgreSQL,
+etc…</li>
+</ul>
+<details>
+<summary>
+Software Engineering
+</summary>
+. Pioneered the company’s adoption of microservices, designing and
+implementing the first service within this architecture, which laid the
+groundwork for future development.<br /><br /> . Developed a
+standardized, user-friendly reporting feature that was subsequently
+adopted across the organization, enhancing data accessibility and
+analysis for end-users.<br /><br /> . Gained a deep understanding of the
+agricultural domain, including agronomy principles, enabling effective
+collaboration and contribution to projects with domain
+experts.<br /><br /> . Excelled in a support role, demonstrating a
+commitment to resolving user issues, even in challenging situations, and
+consistently providing exceptional service.<br /><br /> . Collaborated
+on the development of a blockchain-based infrastructure for beef supply
+chain traceability, enhancing product transparency, consumer trust, and
+sustainability while ensuring compliance with governmental
+norms.<br /><br /> . Supported the development team by participating in
+technical interviews and streamlining onboarding processes, which
+accelerated new hire time-to-productivity.<br /><br /> . Worked with
+colleagues to redesign critical systems for improved performance and
+user experience, including optimizing batch processing architecture to
+handle a 10x increase in data volume, resulting in reduced
+infrastructure costs.<br /><br /> . Provided guidance and support to the
+team on maintaining the production environment, implementing new
+features and improvements, and troubleshooting issues in mobile and web
+applications.<br /><br /> . Collaborated on the development and
+maintenance of offline-first features and Bluetooth communication
+functionalities.<br /><br /> . Assisted in identifying and addressing
+vulnerabilities to ensure system security.<br /><br />
+</details>
+<details>
+<summary>
+Data Engineering
+</summary>
+Not yet… (maybe never, we’ll see)
+</details>
+<h2 id="education">Education</h2>
+<h4
+id="integrated-technical-course-internet-computing-technician-at-instituto-federal-de-educação-ciência-e-tecnologia-do-sertão-pernambucano">Integrated
+Technical Course, Internet Computing Technician at <a
+href="https://portal.ifpe.edu.br/belo-jardim">Instituto Federal de
+Educação, Ciência e Tecnologia do Sertão Pernambucano</a></h4>
+<ul class="incremental">
+<li>January 2018 - December 2020</li>
+</ul>
+<h4 id="web-development-at-trybe">Web development at <a
+href="https://www.betrybe.com/">Trybe</a></h4>
+<ul class="incremental">
+<li>June 2021 - June 2022</li>
+</ul>
 
 <table class="footer">
   <tr>
