--- a/template.html
+++ b/template.html
@@ -45,8 +45,8 @@ $endfor$
     <td class="width-min"><time style="white-space: pre;">$date$</time></td>
   </tr>
   <tr>
-    <th class="width-min">Github</th>
-    <td class="width-auto"><a href="$github-url$"><cite>$github-username$</cite></a></td>
+    <th class="width-min"><a href="$github-url$"><cite>Github</cite></a></th>
+    <td class="width-auto"><a href="$linkedin-url$"><cite>LinkedIn</cite></a></td>
     <th class="width-min"></th>
     <td></td>
   </tr>
@@ -77,6 +77,7 @@ $endfor$
     <td class="width-min"><a href="https://github.com/owickstrom/the-monospace-web"><cite>Oskar Wickström - The Monospace Web</cite></a></td>
   </tr>
 </table>
+<span style="font-size: 5px;">i use neovim, arch and nixos btw</span>
   <div class="debug-grid"></div>
   <script src="index.js"></script>
 </body>
