add something and remove debug

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <td></td>
   </tr>
 </table>
-<label class="debug-toggle-label"><input type="checkbox" class="debug-toggle" /> Debug mode</label>
 <nav id="TOC" role="doc-toc">
 <h2 id="toc-title">Contents</h2>
 <ul class="incremental">
@@ -51,7 +50,7 @@ most of the time – and coding.</p>
 <h2 id="projects">Projects</h2>
 <p>None at all, for now…</p>
 <h2 id="work-experience">Work Experience</h2>
-<h4 id="fullstack-developer-at-irancho">Fullstack Developer at <a
+<h4 id="full-stack-developer-at-irancho">Full Stack Developer at <a
 href="http://www.irancho.com.br">iRancho</a></h4>
 <ul class="incremental">
 <li>May 2022 - Present</li>
@@ -110,6 +109,45 @@ href="https://www.betrybe.com/">Trybe</a></h4>
 <ul class="incremental">
 <li>June 2021 - June 2022</li>
 </ul>
+<details>
+<summary>
+Fundamentals of Web Development
+</summary>
+. The person that has received this certification has completed the
+Fundamentals of Web Development module successfully. During this module,
+the following skills were learned: Unix &amp; Bash, Git, JS Basic &amp;
+DOM, HTML, CSS, JS ES6, Higher Order Functions and Unit Tests, and
+agile.
+</details>
+<details>
+<summary>
+Front-End
+</summary>
+. The person that has received this certification has completed the
+Front-End Development module successfully. During this module, the
+following skills were learned: Life Cycle, State and Events, Controlled
+Components, Router, RTL Tests, Redux with React, Context API, React
+Hooks, agile and soft skills.
+</details>
+<details>
+<summary>
+Back-End
+</summary>
+. The person that has received this certification has completed the
+Back-End Development module successfully. During this module, the
+following skills were learned: Docker, data base SQL and NoSQL, Node.js
+and Express, Mocha, Chai and Sinon, APIs, REST, JWT, ORM, deploy,
+TypeScript, POO, SOLID, concepts of CI/CD with Github Actions.
+</details>
+<details>
+<summary>
+Computer Science
+</summary>
+. The student that has received this certification has completed the
+Computer Science module successfully. During this module, the following
+skills were learned: Python and OOP, Algorithms and Complexity, Data
+Structure and Problem Solving, agile and soft skills.
+</details>
 
 <table class="footer">
   <tr>
@@ -118,7 +156,6 @@ href="https://www.betrybe.com/">Trybe</a></h4>
   </tr>
 </table>
 <span style="font-size: 5px;">i use neovim, arch and nixos btw</span>
-  <div class="debug-grid"></div>
   <script src="index.js"></script>
 </body>
 </html>
