--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <tr>
     <td colspan="4" rowspan="2" class="width-auto" style="text-align: center;">
       <h1 class="title">Levi Manoel</h1>
-      <span class="subtitle">Full Stack Developer</span>
+      <span class="subtitle">Software Engineer</span>
     </td>
   </tr>
   <tr>
@@ -36,7 +36,7 @@ Experience</a></li>
 </ul>
 </nav>
 <h2 id="introduction">Introduction</h2>
-<p>Hey, I’m Levi Manoel, a full stack developer with experience in
+<p>Hey, I’m Levi Manoel, a software engineer with experience in
 JavaScript, TypeScript, Rust, SQL, NoSQL, web development and Google
 Cloud Platform. Right now, I’m studying to become a data engineer, and
 I’m also getting my hands dirty with C.</p>
@@ -45,7 +45,7 @@ most of the time – and coding.</p>
 <h2 id="projects">Projects</h2>
 <p>None at all, for now…</p>
 <h2 id="work-experience">Work Experience</h2>
-<h4 id="full-stack-developer-at-irancho">Full Stack Developer at <a
+<h4 id="software-engineer-at-irancho">Software Engineer at <a
 href="http://www.irancho.com.br">iRancho</a></h4>
 <ul class="incremental">
 <li>May 2022 - Present</li>
@@ -82,7 +82,7 @@ features and improvements, and troubleshooting issues in mobile and web
 applications.<br /><br /> . Collaborated on the development and
 maintenance of offline-first features and Bluetooth communication
 functionalities.<br /><br /> . Assisted in identifying and addressing
-vulnerabilities to ensure system security.<br /><br />
+vulnerabilities to ensure system security.
 </details>
 <details>
 <summary>
