remove the porfolio as a project and standarlize education section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
     <section>
       <h2>Projects</h2>
       <div class="card">
+        None at all, for now…
+      </div>
+      <!-- <div class="card">
         <h3>Personal Portfolio Website</h3>
         <p>A showcase of my skills and experiences</p>
         <p>
@@ -149,7 +152,7 @@
         <div style="margin-top: 10px;">
           <a href="https://github.com/levi-manoel/levi-manoel.github.io" target="_blank" class="button">View Source</a>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <section>
@@ -194,9 +197,9 @@
     <section>
       <h2>Education</h2>
       <div class="card">
-        <h3>Integrated Technical Course, Internet Computing Technician</h3>
+        <h3>Integrated Technical Course, Internet Computing Technician at Instituto Federal de Educação, Ciência e
+          Tecnologia do Sertão Pernambucano</h3>
         <p>January 2018 - December 2020</p>
-        <p>Instituto Federal de Educação, Ciência e Tecnologia do Sertão Pernambucano</p>
       </div>
       <div class="card">
         <h3>Web development at Trybe</h3>
