--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Levi Manoel - Software Engineer</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600&display=swap');
+    @import url('https://fonts.cdnfonts.com/css/victor-mono');
 
     :root {
       --bg-color: #1a1a1a;
@@ -23,7 +23,7 @@
     }
 
     body {
-      font-family: 'IBM Plex Mono', monospace;
+      font-family: 'Victor Mono', monospace;
       background-color: var(--bg-color);
       color: var(--text-color);
       line-height: 1.6;
