--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <h1>Levi Manoel</h1>
       <div>
         <nav>
-          <ul>
+          <button class="hamburger" id="hamburger-btn">&#9776;</button>
+          <ul id="nav-list">
             <li><a href="/index.html">home</a></li>
             <li><a href="/notes.html">notes</a></li>
           </ul>
@@ -166,5 +167,7 @@
         LinkedIn
       </a>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
